# mock-pop

./: Cargo.toml  README.md
scripts/: pop.sh  smtp.sh
src/: main.rs
src/pop/: command.rs  mod.rs  request.rs  response.rs  server.rs
