[package]
name = "mock-pop"
version = "0.1.0"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
futures = "0.3"
tokio-util = {version="0.3", features = ["codec"]}
bytes = "0.5"
log = "0.4.8"
env_logger = "0.7"
clap = "3.0.0-beta.1"
